--- a/package.json
+++ b/package.json
@@ -21,5 +21,17 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itslanaa/SmartContractExchange"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/itslanaa/SmartContractExchange/issues"
+  },
+  "homepage": "https://github.com/itslanaa/SmartContractExchange#readme"
 }
